# lerobot_ros2_so101

./: CMakeLists.txt  README.md  package.xml  pyproject.toml
scripts/: follower_node.py  leader_node.py
src/lerobot_ros2_so101/: FollowerNode.py  LeaderNode.py  __init__.py
src/lerobot_ros2_so101/arm/: FollowerArm.py  LeaderArm.py
