[project]
name = "lerobot-ros2-so101"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catkin-pkg>=1.0.0",
    "lerobot[feetech]>=0.3.3",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
